--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=XXXX
-
-# Optional: Customize OpenAI settings
-# OPENAI_MODEL=gpt-4-turbo-2025-04-09
-# OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-
-
-# GEMINI API Configuration
-GOOGLE_API_KEY=XXXXXX
-
-# TAVILY API KEY
-TAVILY_API_KEY=XXXXXXXXXXXX
+AZURE_OPENAI_ENDPOINT=""
+AZURE_OPENAI_DEPLOYMENT_NAME=""
+AZURE_OPENAI_API_VERSION=""
+AZURE_OPENAI_API_KEY=""
+GROQ_API_KEY=""
+LANGCHAIN_API_KEY=""
+LANGCHAIN_PROJECT=""
+LANGCHAIN_TRACING_V2=""
+HF_TOKEN=""
+GOOGLE_API_KEY=""
+PINECONE_API_KEY=""
+TAVILY_API_KEY=""
